--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -1,15 +1,15 @@
 ---
-title: Dreams
-subtitle: Website Design
+title: Concept
+subtitle: Cabin Controls Design & Model Based Design of drive by Wire
 layout: default
 modal-id: 1
-date: 2014-07-18
+date: 2020-01-02
 img: dreams.png
 thumbnail: dreams-thumbnail.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+project-date: January 2020
+client: Atlis
+category: CAD/CAE
+description:
 
 ---
